// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterChips component should render - no data 1`] = `
<div>
  <span
    class="ins-c-chip-filters"
  />
</div>
`;

exports[`FilterChips component should render 1`] = `
<div>
  <span
    class="ins-c-chip-filters"
  >
    <div
      class="pf-v6-c-label-group pf-m-category"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <span
          aria-hidden="true"
          class="pf-v6-c-label-group__label"
          id="pf-random-id-:r0:"
        >
          Group 1
        </span>
        <ul
          aria-labelledby="pf-random-id-:r0:"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 1
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 1,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 2
                  <span
                    class="pf-v6-c-badge pf-m-unread"
                  >
                    3
                  </span>
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 2,[object Object]"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 3
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 3,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r4:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 4
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 4,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r6:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <button
      class="pf-v6-c-button pf-m-link"
      data-ouia-component-id="ClearFilters"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Clear filters
      </span>
    </button>
  </span>
</div>
`;

exports[`FilterChips component should render group delete 1`] = `
<div>
  <span
    class="ins-c-chip-filters"
  >
    <div
      class="pf-v6-c-label-group pf-m-category"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <span
          aria-hidden="true"
          class="pf-v6-c-label-group__label"
          id="pf-random-id-:rg:"
        >
          Group 1
        </span>
        <ul
          aria-labelledby="pf-random-id-:rg:"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 1
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 1,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rh:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 2
                  <span
                    class="pf-v6-c-badge pf-m-unread"
                  >
                    3
                  </span>
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 2,[object Object]"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:ri:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
      <div
        class="pf-v6-c-label-group__close"
      >
        <button
          aria-label="Close label group"
          aria-labelledby="remove_group_pf-random-id-:rg: pf-random-id-:rg:"
          class="pf-v6-c-button pf-m-plain pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rj:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="remove_group_pf-random-id-:rg:"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 3
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 3,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rl:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 4
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 4,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rn:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <button
      class="pf-v6-c-button pf-m-link"
      data-ouia-component-id="ClearFilters"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Clear filters
      </span>
    </button>
  </span>
</div>
`;

exports[`FilterChips component should render with custom delete message 1`] = `
<div>
  <span
    class="ins-c-chip-filters"
  >
    <div
      class="pf-v6-c-label-group pf-m-category"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <span
          aria-hidden="true"
          class="pf-v6-c-label-group__label"
          id="pf-random-id-:r8:"
        >
          Group 1
        </span>
        <ul
          aria-labelledby="pf-random-id-:r8:"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 1
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 1,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 2
                  <span
                    class="pf-v6-c-badge pf-m-unread"
                  >
                    3
                  </span>
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 2,[object Object]"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:ra:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 3
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 3,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rc:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="pf-v6-c-label-group"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-outline"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  Chip 4
                </span>
              </span>
              <span
                class="pf-v6-c-label__actions"
              >
                <button
                  aria-label="Close Chip 4,"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:re:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <button
      class="pf-v6-c-button pf-m-link"
      data-ouia-component-id="ClearFilters"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        <div>
          Some delete title
        </div>
      </span>
    </button>
  </span>
</div>
`;
